<resources>
    <string name="app_name" translatable="false">Nmedia</string>
    <string name="nmedia" translatable="false">NMedia!</string>
    <string name="author">Netology. University of Internet Professions</string>
    <string name="likes" translatable="false">10</string>
    <string name="share" translatable="false">5</string>
    <string name="visit" translatable="false">5</string>
    <string name="content">Hello, this is the new Netology! Once upon a time, Netology began with online marketing intensives. Then there were courses on design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals. But what is most yours remains with us: we believe that everyone already has the power that makes you want more, aim higher, run faster. Our mission is to help you get on the path of growth and start the chain of change -> http//netolo.gy/fyb</string>
    <string name="published" translatable="false">May 21 at 18:36</string>
    <string name="post_remove" translatable="false">Remove</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="shared" translatable="false">Share</string>
    <string name="options" translatable="false">Menu</string>
    <string name="error_empty_content" translatable="false">Content is empty</string>
    <string name="post_text" translatable="false">Введите текст</string>
    <string name="text" translatable="false">Текст</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote server</string>
    <string name="notification_user_liked" translatable="false">%1$s liked %2$s\'s post</string>
    <string name="notification_new_post" translatable="false">%1$s published new post</string>
    <string name="no_post" translatable="true">" It's empty here. You can add the first post"</string>
    <string name="error_loading" >ERROR</string>
    <string name="retry_loading" >RETRY</string>
    <string name="post_empty" >POST EMPTY</string>
    <string name="todo">TODO</string>
    <string name="input_video_link_here" >Input videolink here</string>
    <string name="post_input_text" >Input text</string>
</resources>

